@@ -1,0 +1,4 @@
+
+from src
+insert overwrite directory '/tmp/dest1' select key, value
+insert overwrite directory '/tmp/dest1' select key, value;
