@@ -1,0 +1,6 @@
+PREHOOK: query: create table dest1_din1(key int, value string)
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: create table dest1_din1(key int, value string)
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@dest1_din1
+FAILED: Error in semantic analysis: The same output cannot be present multiple times:  dest1_din1
