@@ -342,6 +342,9 @@ Trunk -  Unreleased
     HIVE-1001 CombinedHiveInputFormat should parse the inputpath correctly
     (namit via He Yongqiang)
 
+    HIVE-913 no error if user specifies same output table mutliple times
+    (namit via He Yongqiang)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
